--- a/igegep.html
+++ b/igegep.html
@@ -19,16 +19,69 @@
   </head>
   <body>
     <div class="keret">
-
-        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-        </div>
-
+      <div class="gombok">
+        <input id="indit" type="button" value="Indítás">      
+        <!-- <input id="ujra" type="button" value="Újra">   -->       
+    <div> 
       <div class="igegep_keret">
-        igegép keret
-
+        <h1 id="ige">ige</h1>
+        <div id="ige01">
+          <p>1. határozott ragozás (azt)</p>
+          <p>2. általános ragozás (valamit)</p>
+          <div class="nyilak">
+            <img id="igepic01" src="pic/ige01.png" alt=""> 
+            <img id="igepic02" src="pic/ige02.png" alt=""> 
+          </div>
+          <input type="text" id="ige01valasz" value=""></input> 
+        </div>
+        <div id="ige02">
+          <p></p>
+          <p>1. kijelentő mód</p>
+          <p>2. feltételes mód</p>
+          <p>3. felszólító mód</p>
+          <div class="nyilak">
+            <img id="igepic03" src="pic/ige03.png" alt=""> 
+            <img id="igepic04" src="pic/ige04.png" alt=""> 
+            <img id="igepic05" src="pic/ige05.png" alt=""> 
+          </div>
+          <input type="text" id="ige02valasz" value=""></input> 
+        </div>
+        <div id="ige03">
+          <p></p>
+          <p>1. jelen idő</p>
+          <p>2. múlt idő</p>
+          <p>3. jövő idő</p>
+          <div class="nyilak">
+            <img id="igepic06" src="pic/ige06.png" alt=""> 
+            <img id="igepic07" src="pic/ige07.png" alt=""> 
+            <img id="igepic08" src="pic/ige08.png" alt=""> 
+          </div>
+          <input type="text" id="ige03valasz" value=""></input> 
+        </div>
+        <div id="ige04">
+          <p></p>
+          <p>1. egyes szám</p>
+          <p>2. többes szám</p>
+          <div class="nyilak">
+            <img id="igepic09" src="pic/ige09.png" alt=""> 
+            <img id="igepic10" src="pic/ige10.png" alt=""> 
+          </div>
+          <p></p>
+          <p>1. első személy</p>
+          <p>2. második személy</p>
+          <p>3. harmadik személy</p>
+          <div class="nyilak">
+            <img id="igepic11" src="pic/ige11.png" alt=""> 
+            <img id="igepic12" src="pic/ige12.png" alt=""> 
+            <img id="igepic13" src="pic/ige13.png" alt=""> 
+          </div>
+          <input type="text" id="ige04valasz" value=""></input> 
+        </div>
       </div>           
-
-
+      <br>
+      <div class="gombok"> 
+        <input id="ellenoriz" type="button" value="Ellenőrzés">       
+    <div> 
 
  
 
